# repomedic

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: generator.rs  main.rs  report.rs  scanner.rs
